# rusty-dhcpd

./: Cargo.toml
src/: config.rs  dhcpd.rs  leases.rs  lib.rs  main.rs  server.rs  web.rs
src/dhcpd/: leases.rs  mod.rs  server.rs
src/web/: handlers.rs  mod.rs  schemas.rs
tests/: api.rs
