[package]
name = "rusty-dhcpd"
version = "0.1.0"
authors = ["greghaynes"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dhcp4r = "*"
nom = "6.0.1"
slog = "2.7.0"
slog-async = "2.6.0"
slog-term = "2.6.0"
tokio = { version = "1.1.0", features = ["net", "macros", "rt", "sync", "time"] }