[package]
name = "rusty-dhcpd"
version = "0.1.0"
authors = ["greghaynes"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.50"
dhcp4r = "0.2.2"
nix = "0.19.1"
nom = "6.0.1"
serde = "1.0.126"
serde_derive = "1.0.126"
serde_millis = "0.1.1"
slog = "2.7.0"
slog-async = "2.6.0"
slog-term = "2.6.0"
tokio = { version = "1.1.0", features = ["net", "macros", "rt", "rt-multi-thread", "sync", "time"] }
warp = "0.3"
