[package]
name = "rusty-dhcpd"
version = "0.1.0"
authors = ["greghaynes"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
dhcp4r = "0.2"
nix = "0.19"
nom = "6"
serde = "1"
serde_derive = "1"
serde_millis = "0.1"
slog = "2"
slog-async = "2"
slog-term = "2"
tokio = { version = "1", features = ["net", "macros", "rt", "rt-multi-thread", "sync", "time"] }
warp = "0.3"
